--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+lib/common/constants/payment_gateway_constant.dart
+lib/firebase_options.dart
+firebase.json
