--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,5 @@ app.*.map.json
 
 lib/common/constants/payment_gateway_constant.dart
 lib/firebase_options.dart
+android/app/google-services.json
 firebase.json
