--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   syncfusion_flutter_pdfviewer: ^26.1.41
+  http: ^1.2.2
+  uuid: ^4.5.1
+  path_provider: ^2.1.5
 
 
 dependency_overrides:
